# Word2Vec-NumPy

./: .gitignore  LICENSE  README.md  pyproject.toml
assets/: ag_news_extrinsic_glove.json  ag_news_extrinsic_sgns.json  intrinsic_glove.json  intrinsic_sgns.json
checkpoints/: glove_W_in.npy  glove_W_out.npy  glove_b_in.npy  glove_b_out.npy  glove_vocab.json  sgns_W_in.npy  sgns_W_out.npy  sgns_b_in.npy  sgns_b_out.npy  sgns_vocab.json
configs/: config.yaml
configs/data/: wikitext2.yaml
configs/experiment/: glove_extrinsic.yaml  glove_intrinsic.yaml  glove_visualization.yaml  sgns_extrinsic.yaml  sgns_intrinsic.yaml  sgns_visualization.yaml
configs/model/: glove.yaml  sgns.yaml
configs/training/: base.yaml
scripts/: data_download.py  run_job.sh
src/: evaluate.py  evaluate_extrinsic.py  evaluate_intrinsic.py  evaluate_visualization.py  inference.py  train.py
src/word_embeddings/data/: __init__.py  cooccurrence_builder.py  negative_sampler.py  skipgram_dataset.py  tokenizer.py  vocabulary.py  wikitext_loader.py
src/word_embeddings/models/: __init__.py  base_embedding.py  glove_model.py  sgns_model.py
src/word_embeddings/optim/: __init__.py  adagrad.py
src/word_embeddings/training/: trainer.py
src/word_embeddings/utils/: __init__.py  gradient_check.py  initialization.py  similarity.py
